--- a/wp-content/themes/amydalrymple/assets/scss/modules/_forms.scss
+++ b/wp-content/themes/amydalrymple/assets/scss/modules/_forms.scss
@@ -7,8 +7,8 @@ input[type="submit"] {
 	border: 1px solid;
 	border-color: #ccc #ccc #bbb;
 	border-radius: 3px;
-	background: #e6e6e6;
-	color: rgba(0, 0, 0, 0.8);
+	background: $white;
+	color: $black;
 	font-size: 12px;
 	font-size: 0.75rem;
 	line-height: 1;
