--- a/wp-content/themes/amydalrymple/assets/scss/variables/_colors.scss
+++ b/wp-content/themes/amydalrymple/assets/scss/variables/_colors.scss
@@ -4,6 +4,10 @@ $black:			#000;
 $white:			#f8f8f8;
 
 $darkBlue:		#003366;
+$teal:			#669999;
 
 $mauve:			#cc6699;
 $lavender:		#b37399;
+
+$link:			$mauve;
+$linkHover:		$lavender;
