--- a/wp-content/themes/amydalrymple/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/amydalrymple/assets/scss/modules/_navigation.scss
@@ -1,10 +1,30 @@
 /* navigation */
 
 .main-navigation {
+	background-color: $black;
 	clear: both;
 	display: block;
-	float: left;
+	padding: .5rem;
 	width: 100%;
+
+	button {
+		background-color: $black;
+		border-color: $mauve;
+		color: $link;
+		letter-spacing: 0.125em;
+		text-transform: uppercase;
+
+		&:hover {
+			color: $linkHover;
+			-webkit-box-shadow:inset 0 0 4px 0 rgba(255,255,255,.6);
+			box-shadow:inset 0 0 4px 0 rgba(255,255,255,.6);
+			text-shadow: 0 0 4px $white;
+		}
+	}
+
+	&.toggled {
+		padding-bottom: 0;
+	}
 }
 
 .main-navigation ul {
@@ -49,13 +69,16 @@
 
 .main-navigation a {
 	display: block;
+	padding: .5rem;
 	text-decoration: none;
+
+	&:hover { color: $linkHover; }
 }
 
 /* Small menu. */
 .menu-toggle,
 .main-navigation.toggled ul {
-	display: block;
+	display: inline-block;
 }
 
 @media screen and (min-width: 37.5em) {
