--- a/wp-content/themes/amydalrymple/assets/scss/typography/_base.scss
+++ b/wp-content/themes/amydalrymple/assets/scss/typography/_base.scss
@@ -19,6 +19,23 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $serif;
 }
 
+	h1 { font-size: 2rem; }
+	h2 { font-size: 1.625rem; }
+	h3 { font-size: 1.375rem; }
+	h4 { font-size: 1.125rem; }
+
+	@media only screen and (min-width: 700px) {
+		h1 { font-size: 2.5rem; }
+		h2 { font-size: 2rem; }
+		h3 { font-size: 1.5rem; }
+	}
+
+	@media only screen and (min-width: 900px) {
+		h1 { font-size: 3rem; }
+		h2 { font-size: 2.25rem; }
+		h3 { font-size: 1.75rem; }
+	}
+
 p {
 	margin-bottom: 1.4rem;
 }
@@ -28,6 +45,7 @@ dfn, cite, em, i {
 }
 
 blockquote {
+	font-size: 1.25rem;
 	margin: 0 1.4rem;
 }
 
@@ -38,19 +56,19 @@ address {
 pre {
 	background: #eee;
 	font-family: $mono;
-	font-size: 15px;
-	font-size: 0.9375rem;
+	font-size: 14px;
+	font-size: 0.875rem;
 	line-height: 1.4;
 	margin-bottom: 1.4rem;
 	max-width: 100%;
 	overflow: auto;
-	padding: 1.6em;
+	padding: 1rem;
 }
 
 code, kbd, tt, var {
 	font-family: $mono;
-	font-size: 15px;
-	font-size: 0.9375rem;
+	font-size: 14px;
+	font-size: 0.875rem;
 }
 
 abbr, acronym {
